--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "core-js": "^3.39.0",
+    "feather-icons": "^4.29.2",
     "fraction.js": "^5.2.1",
     "regenerator-runtime": "^0.14.1"
   }
